--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,10 +6,10 @@
     <parent>
         <groupId>dev.morphia.morphia</groupId>
         <artifactId>morphia</artifactId>
-        <version>2.4.14-SNAPSHOT</version>
+        <version>2.4.14-STARSRELAM-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-
+    
     <artifactId>morphia-core</artifactId>
 
     <build>
