--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -9,12 +10,13 @@
 
     <groupId>dev.morphia.morphia</groupId>
     <artifactId>morphia</artifactId>
-    <version>2.4.14-STARSRELAM-SNAPSHOT</version>
+    <version>2.4.15-STARSRELAM-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>morphia</name>
     <url>https://github.com/MorphiaOrg/morphia</url>
-    <description>MongoDB object-document mapper in Java based on https://github.com/mongodb/mongo-java-driver</description>
+    <description>MongoDB object-document mapper in Java based on https://github.com/mongodb/mongo-java-driver
+    </description>
 
     <scm>
         <connection>scm:git:git@github.com:MorphiaOrg/morphia.git</connection>
@@ -51,7 +53,7 @@
             <url>https://packages.aliyun.com/maven/repository/2421751-snapshot-i7Aufp/</url>
         </snapshotRepository>
     </distributionManagement>
-    
+
     <build>
         <defaultGoal>install</defaultGoal>
         <pluginManagement>
@@ -90,7 +92,9 @@
                     <configuration>
                         <failBuildOnProblemsFound>true</failBuildOnProblemsFound>
                         <analysisConfigurationFiles>
-                            <analysisConfigurationFile>${maven.multiModuleProjectDirectory}/config/revapi-filtered.json</analysisConfigurationFile>
+                            <analysisConfigurationFile>
+                                ${maven.multiModuleProjectDirectory}/config/revapi-filtered.json
+                            </analysisConfigurationFile>
                         </analysisConfigurationFiles>
                         <analysisConfiguration>
                             <revapi.versions>
@@ -130,6 +134,20 @@
                     <generateGitPropertiesFile>true</generateGitPropertiesFile>
                     <generateGitPropertiesFilename>target/git.properties</generateGitPropertiesFilename>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.3.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
@@ -331,7 +349,7 @@
         <module>build-plugins</module>
         <module>util</module>
         <module>core</module>
-<!--        <module>kotlin</module>-->
+        <!--        <module>kotlin</module>-->
         <module>validation</module>
         <module>examples</module>
     </modules>
